<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/socket_title"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/socket_client"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_client_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/socket_client_recycler"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="10sp"
        android:layout_weight="3.5">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_client_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/내용작성"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_client_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>