<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/protocol_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_socket_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/socket_client" />

        <Space
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_socket_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/socket_server" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>