<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="130sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#D8D8D8"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/text_server_dialog_id"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:textSize="23sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                tools:text="Cell ID" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_margin="10sp">


            <EditText
                android:id="@+id/edit_server_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:padding="7sp"
                android:background="@null"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/message"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp">

            <Button
                android:id="@+id/btn_send_to_client"
                android:layout_width="0sp"
                android:layout_height="70sp"
                android:background="#7E7E7E"
                android:layout_weight="1"
                android:textSize="21sp"
                android:layout_marginEnd="20sp"
                android:text="@string/메세지전송"
                android:layout_marginBottom="10sp"
                />

            <Button
                android:id="@+id/btn_close_dialog"
                android:layout_width="0sp"
                android:layout_height="70sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:background="#7E7E7E"
                android:text="@string/닫기"
                android:textSize="21sp" />
        </TableRow>



    </TableLayout>

</LinearLayout>